gen/blogger/v2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-blogger2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/blogger/v2/lib)
error[E0423]: expected value, found struct `blogs::BlogsActions`
    --> gen/blogger/v2/lib/src/lib.rs:2145:13
     |
2145 |             blogs::BlogsActions
     |             ^^^^^^^^^^^^^^^^^^^ did you mean `blogs::BlogsActions { /* fields */ }`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-blogger2`.

To learn more, run the command again with --verbose.
